webapp : - general replace of ng-show by ng-if; - force username to lowercase; - move httpRest.message from each form to navigation header; - fix button order of form-new; - refactoring of field.options behavior and html template unification with field.filterResults; - refactoring and fix of field.flags; - fix RequestController bugs; - refactoring of buildItemStr for better UI design and backend logic; - split httpRest.message into messageWorking and messageError for automated tests detection errors; - splited service.getPrimaryKey into getPrimaryKey, getPrimaryKeyFromForeignData and getForeignKeyFromPrimaryKeyForeign; - CrudItem, refactoring and added param fieldNameForeign to permit map to services with diferent field name; - Pagination, refactoring to automatic pageSize, using avaiable height above navigation header; - add Selenium IDE e Runner testes;
database :
- CrudUser, change primary key from id to name;
- request, added desc_value;
- general UNIQUE and NOT NULL fixes;
- added iso8583_router_message_adapter_item initial data;
- remove without time zone from all timestamp fields;

nodejs :
- fixes datetime timezone bug parser;
- added modules support;
- change command line arguments parser method;

j2ee :
- pom.xml splited into war (default), wildfly and thorntail variants;
- replaced json parser jackson by Jsonb;
- iso8583router, refactoring and added parser from text config file;